--- a/src/Screens/Login/Login.css
+++ b/src/Screens/Login/Login.css
@@ -1,6 +1,7 @@
 .login-container {
     display: flex;
-    height: 100vh;
+    min-height: 100dvh;
+    height: auto;
     width: 100vw;
     flex-direction: row;
     color: var(--text-on-dark);
